Fixed z-index bug

--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -4,6 +4,7 @@
   height: 100%;
   width: 100%;
   max-width: 250px;
+  z-index: 10;
 }
 
 .sidebar-list {
